2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/thumbnail/totem-thumbnail.c (set_icon_to_default):
	Patch from Philip Withnall <philip@tecnocode.co.uk> to reset the
	icon properly, see bug #573973

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (video_widget_create): Make the default
	drag action be copy (Closes: #574565)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_close): Reset the seekbar to 0 when a file
	is closed (Closes: #577255)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py: Sort the languages
	in the combo box (Closes: #577366)

2009-03-24  Christian Persch  <chpe@gnome.org>

	* src/totem-session.c: (totem_session_restore):
	* src/totem-session.h:
	* src/totem.c: (main): Add smclient options when parsing totem's
	command line. Bug #576620.

2009-03-24  Christian Persch  <chpe@gnome.org>

	* src/eggdesktopfile.c: (egg_set_desktop_file):
	* src/eggsmclient-1.patch:
	* src/eggsmclient.c: (egg_sm_client_get_option_group): Update smclient
	to latest libegg copy. Bug #560328 continued.

2009-03-24  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
	Use Ctrl+S not Shift+S to capture a screenshot (Closes: #576610)

2009-03-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-video-thumbnailer.c: Fix Cairo #include, spotted by Chris
	Vine <chris@cvine.freeserve.co.uk>. (Closes: #576067)

2009-03-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py: Brown paper bag revert
	of part of the last commit to fix the OpenSubtitles plugin.
	(Closes: #575771)

============ Version 2.26.0

2009-03-16  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.0

2009-03-11  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/totem/__init__.py: Import gettext and set the